--- a/project - Spotify Clone/style.css
+++ b/project - Spotify Clone/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    /* background-color: black;
-    color: white; */
+    background-color: black;
+    color: white;
 
 }
 
@@ -19,6 +19,7 @@ body {
 
 .right {
     width: 75vw;
+    margin: 16px 0px;
 }
 
 .home {}
@@ -43,6 +44,61 @@ body {
     font-size: 13px;
 }
 
+.library {
+    min-height: 75vh;
+    position: relative;
+}
+
 .heading img {
     width: 25px;
+}
+
+.footer {
+    display: flex;
+    font-size: 10px;
+    gap: 13px;
+    position: absolute;
+    bottom: 0;
+}
+
+.footer a {
+    color: grey;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #1c1c1c;
+    border-radius: 7px;
+}
+
+.header>* {
+    padding: 20px;
+}
+
+.spotifyPlaylists {
+    padding: 16px;
+}
+
+.card {
+    width: 200px;
+    padding: 5px;
+    background-color: #252525;
+    border-radius: 7px;
+}
+
+.cardContainer {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 30px 0px;
+}
+
+.card img {
+    width: 100%;
+    object-fit: contain;
+}
+
+.card>* {
+    padding-top: 7px;
 }
