--- a/project - Spotify Clone/style.css
+++ b/project - Spotify Clone/style.css
@@ -138,6 +138,7 @@ body {
     font-size: 18px;
     color: white;
     cursor: pointer;
+
 }
 
 .loginBtn {
@@ -149,6 +150,7 @@ body {
     padding: 10px;
     width: 100px;
     cursor: pointer;
+    border: none;
 }
 
 .loginBtn:hover {
@@ -171,10 +173,29 @@ body {
 }
 
 .songsList ul {
-    padding: 0px 13px;
+    padding: 0px 40px;
 
 }
 
 .songsList ul li {
     list-style-type: decimal;
+    display: flex;
+    gap: 13px;
+    cursor: pointer;
+    padding: 13px;
+    margin: 12px 0px;
+    border: 1px solid white;
+    border-radius: 3px;
+}
+
+.playNow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.playNow span {
+    font-size: 15px;
+    width: 64px;
+    padding: 5px;
 }
